# IFWUpdateChecker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
prerequisites/: brew.txt  msys.txt
src/: IFWUpdateChecker.hpp
templates/: _version.h
tests/: CMakeLists.txt  tests.cpp  tests.hpp
